
	* src/ejabberd_c2s.erl, src/ejabberd_s2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl: Use the new clause of
	exmpp_stanza:reply_with_error/2, exmpp_iq:error/2,
	exmpp_iq:error_without_original/2 and the new
	exmpp_jid:make_bare_jid/1.

	* src/jlib.erl: Add function short_bare_jid/1.

	* src/ejabberd_sm.erl: Forgot to convert a <presence/> from the new to
	the old record.

2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/Makefile.in: Remove the -I flag for exmpp includes; the
	-include_lib pragma is a better solution.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl: Use -include_lib instead of -include to
	include exmpp.hrl.

	* src/ejabberd_s2s.erl: Convert to exmpp.

	* src/jlib.erl: Add function to convert to and from old ejabberd #jid
	record. Move function short_jid/1 from ejabberd_c2s.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl: Use the new functions from jlib. Use the new
	exmpp_xml:node_to_list/3.

	* src/ejabberd_router.erl: Before doing any routing, the router print
	a warning if old structures are used. Then it converts the structures
	to the old format and route them. The router doesn't care about the
	structures format but the conversion is necesary for code called from
	this module.

	* src/ejabberd_c2s.erl, src/ejabberd_s2s.erl, src/ejabberd_s2s_in.erl,
	src/ejabberd_s2s_out.erl: No conversion is done before calling
	ejabberd_router:route/3.

2008-06-27  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl, src/ejabberd_s2s_out.erl,
	src/ejabberd_s2s_in.erl: Use the new exmpp namespace macro names.
	Update send_element/2 to use exmpp new to_list functions.

2008-06-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl: Use a macro in ?DEFAULT_NS instead of the
	namespace atom directly. Comment DBGFSM our again. Remove macro
	ERR_SERVICE_UNAVAILABLE.