@@ -13,6 +13,11 @@
 	* src/ejabberd_sm.erl: Forgot to convert a <presence/> from the new to
 	the old record.
 
+	* src/ejabberd_c2s.erl: Use jlib:short_bare_jid/1. Rewrite
+	is_auth_packet/1 to use new formats. Don't convert <presence/> before
+	calling ejabberd_sm:set_presence/7. Don't convert broadcast children,
+	because it's an internal special element.
+
 2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/Makefile.in: Remove the -I flag for exmpp includes; the
